--- a/src/pages/1.md
+++ b/src/pages/1.md
@@ -15,13 +15,11 @@ title: Clue 1
   ![](/images/room.jpg)
 </div>
 
-(for bra).
-
 <div class="page-navigation">
 
   [← back](/)
 
 
-  [Next clue →](/2)
+  <a href="/2" class="clue-link">Next clue →</a>
 
 </div>
