--- a/src/pages/2.md
+++ b/src/pages/2.md
@@ -15,12 +15,9 @@ title: Clue 2
   ![](/images/sickle.jfif)
 </div>
 
-(Drink/flowers)
-
 <div class="page-navigation">
 
   [← back](/1)
 
-  [Next clue →](/3)
-
+  <a href="/3" class="clue-link">Next clue →</a>
 </div>
