--- a/src/pages/3.md
+++ b/src/pages/3.md
@@ -12,14 +12,12 @@ title: Clue 3
 
   ![](/images/lee.jpg)
 </div>
-R you poor lee 
 
-(for onion chutney).
 
 <div class="page-navigation">
 
 [← back](/2)
 
-[Next clue →](/4)
+  <a href="/4" class="clue-link">Next clue →</a>
 
 </div>
