--- a/src/pages/4.md
+++ b/src/pages/4.md
@@ -14,14 +14,10 @@ title: Clue 4
 
 </div>
 
-Hi up two go two sleep 
-
-(for Gizmo).
-
 <div class="page-navigation">
 
 [← back](/3)
 
-[Next clue →](/5)
+  <a href="/5" class="clue-link">Next clue →</a>
 
 </div>
