--- a/src/pages/5.md
+++ b/src/pages/5.md
@@ -2,6 +2,8 @@
 title: Clue 5
 ---
 
+This is the last one I'm afraid...
+
 <div class="gallery">
 
   ![](/images/wee.jpg)
@@ -16,9 +18,6 @@ title: Clue 5
 
 </div>
 
-Wee knead sum pay per.
-
-(for Pandora).
 
 <div class="page-navigation">
 
