--- a/src/pages/1.md
+++ b/src/pages/1.md
@@ -1,25 +1,5 @@
 ---
-title: Clue 1
+title: Page 1
 ---
 
-<div class="gallery">
-
-  ![](/images/miss.jpg)
-
-  ![](/images/teas.jpg)
-
-  ![](/images/s.png)
-
-  ![](/images/cape.webp)
-
-  ![](/images/room.jpg)
-</div>
-
-<div class="page-navigation">
-
-  [← back](/)
-
-
-  <a href="/2" class="clue-link">Next clue →</a>
-
-</div>
+This is page 1
