--- a/src/pages/2.md
+++ b/src/pages/2.md
@@ -1,23 +1,5 @@
 ---
-title: Clue 2
+title: Page 2
 ---
 
-<div class="gallery">
-
-  ![](/images/eye.jpg)
-
-  ![](/images/knead.jpg)
-
-  ![](/images/my.jfif)
-
-  ![](/images/bye.jpg)
-
-  ![](/images/sickle.jfif)
-</div>
-
-<div class="page-navigation">
-
-  [← back](/1)
-
-  <a href="/3" class="clue-link">Next clue →</a>
-</div>
+This is page 2
